--- a/client/src/components/DressModal.css
+++ b/client/src/components/DressModal.css
@@ -14,14 +14,15 @@
 
 .image{
   margin-top: 30%;
-  margin-left: 15%;
+  padding-left: 15%;
   
 }
 
 .secondComponent {
   width: 330px;
-  padding-left: 10%;
-  padding-top: 10%;
+  padding-left: 30%;
+  padding-top: 5%;
+  position: absolute;
 }
 
 .star {
