--- a/client/src/components/EarringModal.css
+++ b/client/src/components/EarringModal.css
@@ -23,13 +23,15 @@
 
 .image {
   margin-top: 20%;
-  margin-left: 15%;
+  margin-left: 20%;
 }
 
 .secondComponent {
   width: 600px;
-  padding-left: 10%;
+  padding-left: 25%;
   padding-top: 10%;
+  padding-right: 10%;
+  position: static;
 }
 
 .productName {
