--- a/client/src/components/PurseModal.css
+++ b/client/src/components/PurseModal.css
@@ -14,13 +14,14 @@
 
 .image {
   margin-top: 20%;
-  margin-left: 15%;
+  padding-left: 20%;
 }
 
 .secondComponent {
   width: 600px;
-  padding-left: 10%;
+  padding-left: 20%;
   padding-top: 10%;
+  position: relative;
 }
 
 .productName {
