--- a/client/src/components/app.css
+++ b/client/src/components/app.css
@@ -1,10 +1,13 @@
 .looksContainer {
-  padding: 20px;
+  /* margin-left: 2%; */
+  padding-left: 10%;
   height: 600px;
   width: 350px;
 }
 .looksDiv  {
   margin-bottom: 15px;
+  padding: 0 5%;
+  position: relative;
 }
 
 .looks {
